# api-ddd-example

./: .env.example  Dockerfile  Makefile  pyproject.toml
app/application/api/: main.py  schemas.py
app/application/api/claims/: filters.py  handlers.py  schemas.py
app/domain/entities/: base.py  claims.py
app/domain/events/: claims.py
app/domain/exceptions/: claims.py
app/domain/values/: base.py  claims.py
app/infra/repositories/: claims.py
app/infra/repositories/claims/: base.py  converters.py  memory.py  mongo.py
app/infra/repositories/filters/: claims.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  claims.py
app/logic/events/: base.py
app/logic/exceptions/: claims.py
app/logic/mediator/: base.py  command.py  event.py  query.py
app/logic/queries/: claims.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_claims.py
app/tests/domain/values/: test_claims.py
app/tests/logic/: test_claims.py
docker_compose/: storages.yaml
