[tool.poetry]
name = "ddd-support-api"
version = "0.1.0"
description = ""
authors = ["Sergey <one6sergey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
black = "^24.4.2"
pytest = "^8.2.2"
email-validator = "^2.2.0"
faker = "^26.0.0"
pytest-asyncio = "^0.23.7"
punq = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
